fix fullscreen overlap

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -399,8 +399,16 @@ hr {
   width: fit-content;
 }
 
+.width-100 {
+  width: 100%;
+}
+
 .height-auto {
   height: auto;
+}
+
+.height-100 {
+  height: 100%;
 }
 
 .white-space-nowrap {
